<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/entry"
    tools:context=".auth.AuthUiActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#610B21"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Welcome to SSCBS"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity = "center"
        android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/welcome_text"
                android:textColor="@color/white"
                android:textSize="19dp"
                android:id="@+id/tv"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="138dp"
                android:background="@drawable/shape2"
                android:fontFamily="@font/raleway_light"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/onlyevents"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/non_sscbs_events"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />

            <Button
                android:id="@+id/onlyevents"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape2"
                android:fontFamily="@font/raleway_light"
                android:text="Upcoming Events"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/use_theme_header" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/default_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/default_theme" />

            <RadioButton
                android:id="@+id/purple_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purple_theme" />

            <RadioButton
                android:id="@+id/green_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_theme" />

            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />
        </RadioGroup>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/auth_providers_header" />

        <CheckBox
            android:id="@+id/google_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/google_label" />

        <CheckBox
            android:id="@+id/facebook_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/facebook_label" />

        <CheckBox
            android:id="@+id/twitter_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/twitter_label" />

        <CheckBox
            android:id="@+id/email_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/email_label" />

        <CheckBox
            android:id="@+id/phone_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/phone_label" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tos_header" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/google_tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/google_tos_label" />

            <RadioButton
                android:id="@+id/firebase_tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebase_tos_label" />

        </RadioGroup>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_policy_header" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/google_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/google_privacy_label" />

            <RadioButton
                android:id="@+id/firebase_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firebase_privacy_label" />

        </RadioGroup>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/logo_header" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/firebase_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/firebase_logo_label" />

            <RadioButton
                android:id="@+id/google_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_logo_label" />

            <RadioButton
                android:id="@+id/no_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_logo_label" />

        </RadioGroup>

        <TextView
            android:id="@+id/facebook_scopes_label"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/extra_facebook_scopes" />

        <CheckBox
            android:id="@+id/facebook_scope_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/friends" />

        <CheckBox
            android:id="@+id/facebook_scope_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/photos" />

        <TextView
            android:id="@+id/google_scopes_label"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/extra_google_scopes" />

        <CheckBox
            android:id="@+id/google_scope_drive_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/drive_file_scope" />

        <CheckBox
            android:id="@+id/google_scope_youtube_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/youtube_data_scope" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/other_options_header" />

        <CheckBox
            android:id="@+id/credential_selector_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enable_credential_selector" />

        <CheckBox
            android:id="@+id/hint_selector_enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enable_hint_selector" />

        <CheckBox
            android:id="@+id/allow_new_email_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/allow_new_email_acccount" />

    </LinearLayout>

</LinearLayout>
